# financial-lobster

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  compare.md  design_skill_tool_card_routing.md  docker-compose.yml  learned.md  prd.md  pyproject.toml
backend/app/: main.py
backend/app/api/: feishu.py
backend/app/core/: config.py  logging.py
backend/app/integrations/feishu/: client.py  events.py
backend/app/services/: analysis_cache.py  cards.py  conversation_store.py  document_parser.py  event_dedup.py  financial_summary.py  industry_research.py  llm_provider.py  markdown_report.py  qa_service.py  research_fill_config.py  session_store.py  task_store.py  template_docx.py  templates.py  user_memory.py
backend/app/skills/: __init__.py  base.py  compliance.py  financial_summary_skill.py  industry_research_skill.py  qa_skill.py  registry.py  template_rewrite_skill.py
backend/app/tools/: __init__.py  base.py  web_search.py
backend/app/workers/: feishu_ws.py
scripts/: build_from_template.py  build_full_report.py  clear_cache.sh  grounded_section.py  purge_user_memory.py  rewrite_by_template.py  start.sh  zhipu_search_smoke.py
