[project]
name = "financial-lobster"
version = "0.1.0"
description = "Personal AI assistant MVP for financial and operating material analysis."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "httpx",
    "python-json-logger",
    "lark-oapi",
    "pypdf",
    "python-docx",
    "openpyxl",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
